--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "keen-slider": "^5.5.1",
     "next": "11.0.0",
     "path": "^0.12.7",
     "react": "17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.19",
     "react-router-dom": "^5.2.0",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.0"
   }
 }
